cmake_minimum_required(VERSION 3.10)

add_executable(binary_tree_inorder_traversal binary_tree_inorder_traversal.cc tree_node.h)
target_link_libraries(binary_tree_inorder_traversal glog gflags_nothreads unwind)

add_executable(binary_tree_preorder_traversal binary_tree_preorder_traversal.cc tree_node.h)
target_link_libraries(binary_tree_preorder_traversal glog gflags_nothreads unwind)

add_executable(n_ary_tree_postorder_traversal n_ary_tree_postorder_traversal.cc tree_node.h)
target_link_libraries(n_ary_tree_postorder_traversal glog gflags_nothreads unwind)

add_executable(n_ary_tree_preorder_traversal n_ary_tree_preorder_traversal.cc tree_node.h)
target_link_libraries(n_ary_tree_preorder_traversal glog gflags_nothreads unwind)

add_executable(n_ary_tree_level_order_traversal n_ary_tree_level_order_traversal.cc tree_node.h)
target_link_libraries(n_ary_tree_level_order_traversal glog gflags_nothreads unwind)

add_executable(invert_binary_tree invert_binary_tree.cc tree_node.h)
target_link_libraries(invert_binary_tree glog gflags_nothreads unwind)

add_executable(validate_binary_search_tree validate_binary_search_tree.cc  tree_node.h)
target_link_libraries(validate_binary_search_tree glog gflags_nothreads unwind)

add_executable(maximum_depth_of_binary_tree maximum_depth_of_binary_tree.cc tree_node.h)
target_link_libraries(maximum_depth_of_binary_tree glog gflags_nothreads unwind)

add_executable(minimum_depth_of_binary_tree minimum_depth_of_binary_tree.cc  tree_node.h)
target_link_libraries(minimum_depth_of_binary_tree glog gflags_nothreads unwind)

add_executable(construct_binary_tree_from_preorder_and_inorder_traversal construct_binary_tree_from_preorder_and_inorder_traversal.cc tree_node.h)
target_link_libraries(construct_binary_tree_from_preorder_and_inorder_traversal glog gflags_nothreads unwind)

add_executable(lowest_common_ancestor_of_a_binary_tree lowest_common_ancestor_of_a_binary_tree.cc tree_node.h)
target_link_libraries(lowest_common_ancestor_of_a_binary_tree glog gflags_nothreads unwind)

add_executable(binary_tree_level_order_traversal binary_tree_level_order_traversal.cc tree_node.h)
target_link_libraries(binary_tree_level_order_traversal glog gflags_nothreads unwind)

add_executable(find_largest_value_in_each_tree_row find_largest_value_in_each_tree_row.cc tree_node.h)
target_link_libraries(find_largest_value_in_each_tree_row glog gflags_nothreads unwind)

add_executable(lowest_common_ancestor_of_a_binary_search_tree lowest_common_ancestor_of_a_binary_search_tree.cc tree_node.h)
target_link_libraries(lowest_common_ancestor_of_a_binary_search_tree glog gflags_nothreads unwind)

add_executable(add_two_numbers add_two_numbers.cc tree_node.h)
target_link_libraries(add_two_numbers glog gflags_nothreads unwind)
